配色,词频文件

--- a/TFIDF.ipynb
+++ b/TFIDF.ipynb
@@ -5,11 +5,11 @@
    "execution_count": 46,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2023-11-25T07:21:57.132980Z",
      "start_time": "2023-11-25T07:21:57.127745Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [
     {
@@ -41,6 +41,14 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "32a0e42c5fa4559b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-25T07:21:57.151189Z",
+     "start_time": "2023-11-25T07:21:57.145052Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def tokenize(text):\n",
@@ -143,19 +151,19 @@
     "    with open('output/nltk_output/output_nltk_' + year + '_' + format_month(start_month)\n",
     "              + '_' + format_month(end_month) + '_' + 'nation' + '.json', 'w', encoding='utf-8') as f:\n",
     "        json.dump(sorted_data, f, indent=4, ensure_ascii=False)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-25T07:21:57.151189Z",
-     "start_time": "2023-11-25T07:21:57.145052Z"
-    }
-   },
-   "id": "32a0e42c5fa4559b"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "8c9c26bab89865a5",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-25T07:22:07.122825Z",
+     "start_time": "2023-11-25T07:21:57.150957Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -176,9 +184,9 @@
     }
    ],
    "source": [
-    "year = '2023'\n",
-    "start_month = 10\n",
-    "end_month =11\n",
+    "year = '2022'\n",
+    "start_month = 7\n",
+    "end_month =9\n",
     "\n",
     "data = load_data(year, start_month, end_month)\n",
     "keyword_list = []\n",
@@ -192,23 +200,25 @@
     "    sent.append(word_list_cleaned)\n",
     "    keyword_list.extend(word_list_cleaned)\n",
     "keyword_counter = Counter(keyword_list)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-25T07:22:07.122825Z",
-     "start_time": "2023-11-25T07:21:57.150957Z"
-    }
-   },
-   "id": "8c9c26bab89865a5"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "72e9f43aea5586c5",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-25T07:22:07.142927Z",
+     "start_time": "2023-11-25T07:22:07.126639Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "<Text: UAE Bolsters Cyber Future Treasury Partnership Collaborations.The United...>"
+      "text/plain": [
+       "<Text: UAE Bolsters Cyber Future Treasury Partnership Collaborations.The United...>"
+      ]
      },
      "execution_count": 49,
      "metadata": {},
@@ -216,44 +226,35 @@
     }
    ],
    "source": [
-    "corpus=TextCollection(sent)\n",
-    "corpus"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-25T07:22:07.142927Z",
-     "start_time": "2023-11-25T07:22:07.126639Z"
-    }
-   },
-   "id": "72e9f43aea5586c5"
+    "corpus=TextCollection(sent)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "c3353b0b6addd2ec",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-25T07:22:26.728812Z",
+     "start_time": "2023-11-25T07:22:07.142421Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "word_dict = dict(keyword_counter)\n",
     "sorted_data = sorted(word_dict.items(), key=lambda x: x[1], reverse=True)\n",
     "# 创建CSV文件并写入数据\n",
-    "with open('output/TF_IDF/output_2023_season4.csv', 'w', newline='') as csv_file:\n",
+    "with open('output/TF_IDF_freq/output_2022_season3.csv', 'w', newline='') as csv_file:\n",
     "    writer = csv.writer(csv_file)\n",
     "\n",
     "    # 写入CSV文件的表头\n",
-    "    writer.writerow(['word', 'freq'])\n",
+    "    writer.writerow(['word', 'TF_IFD','freq'])\n",
     "\n",
     "    # 写入JSON数据\n",
     "    for item in sorted_data:\n",
-    "        writer.writerow([item[0], corpus.tf_idf(item[0],corpus)])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-25T07:22:26.728812Z",
-     "start_time": "2023-11-25T07:22:07.142421Z"
-    }
-   },
-   "id": "c3353b0b6addd2ec"
+    "        writer.writerow([item[0], corpus.tf_idf(item[0],corpus), item[1]])"
+   ]
   }
  ],
  "metadata": {
