--- a/TFIDF.ipynb
+++ b/TFIDF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "id": "32a0e42c5fa4559b",
    "metadata": {
     "ExecuteTime": {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "id": "8c9c26bab89865a5",
    "metadata": {
     "ExecuteTime": {
@@ -178,15 +178,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total amount of data is 358\n",
+      "Total amount of data is 695\n",
       "start nlkt process\n"
      ]
     }
    ],
    "source": [
-    "year = '2022'\n",
-    "start_month = 7\n",
-    "end_month =9\n",
+    "year = '2023'\n",
+    "start_month = 1\n",
+    "end_month = 3\n",
     "\n",
     "data = load_data(year, start_month, end_month)\n",
     "keyword_list = []\n",
@@ -199,12 +199,13 @@
     "    word_list_cleaned = remove_stopwords(stopword_list, word_list)\n",
     "    sent.append(word_list_cleaned)\n",
     "    keyword_list.extend(word_list_cleaned)\n",
+    "\n",
     "keyword_counter = Counter(keyword_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "id": "72e9f43aea5586c5",
    "metadata": {
     "ExecuteTime": {
@@ -213,25 +214,14 @@
     },
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Text: UAE Bolsters Cyber Future Treasury Partnership Collaborations.The United...>"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "corpus=TextCollection(sent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "id": "c3353b0b6addd2ec",
    "metadata": {
     "ExecuteTime": {
@@ -245,15 +235,15 @@
     "word_dict = dict(keyword_counter)\n",
     "sorted_data = sorted(word_dict.items(), key=lambda x: x[1], reverse=True)\n",
     "# 创建CSV文件并写入数据\n",
-    "with open('output/TF_IDF_freq/output_2022_season3.csv', 'w', newline='') as csv_file:\n",
+    "with open('output/TF_IDF_freq/output_2023_season1.csv', 'w', newline='') as csv_file:\n",
     "    writer = csv.writer(csv_file)\n",
     "\n",
     "    # 写入CSV文件的表头\n",
-    "    writer.writerow(['word', 'TF_IFD','freq'])\n",
+    "    writer.writerow(['word', 'TF_IFD','TF','IDF','freq'])\n",
     "\n",
     "    # 写入JSON数据\n",
     "    for item in sorted_data:\n",
-    "        writer.writerow([item[0], corpus.tf_idf(item[0],corpus), item[1]])"
+    "        writer.writerow([item[0], corpus.tf_idf(item[0],corpus),corpus.tf(item[0],corpus),corpus.idf(item[0]),item[1]])"
    ]
   }
  ],
@@ -266,14 +256,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
