更新停用词,重新绘图

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -1,16 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "前十词频"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "initial_id",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-25T07:21:57.132980Z",
-     "start_time": "2023-11-25T07:21:57.127745Z"
-    },
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -40,15 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "32a0e42c5fa4559b",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-25T07:21:57.151189Z",
-     "start_time": "2023-11-25T07:21:57.145052Z"
-    },
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def tokenize(text):\n",
@@ -105,7 +98,7 @@
     "    with open(\"other_file/glasgow_stop_words.txt\", \"r\") as f:\n",
     "        stopwords_list = f.read().split('\\n')\n",
     "        stopwords_security_list.extend(stopwords_list)\n",
-    "    with open(\"other_file/info_security_stopwords.txt\", \"r\") as s:\n",
+    "    with open(\"other_file/all_info_security_stopwords.txt\", \"r\") as s:\n",
     "        info_security_list = s.read().split('\\n')\n",
     "        stopwords_security_list.extend(info_security_list)\n",
     "    stopwords_security = set(stopwords_security_list)\n",
@@ -133,7 +126,7 @@
     "            news_list = json.load(file)\n",
     "            for news_json in news_list:\n",
     "                text = news_json['title'] + '.' + news_json['text']\n",
-    "                news_data.append(text.lower())\n",
+    "                news_data.append(text)\n",
     "        count = count + 1\n",
     "    print(\"Total amount of data is \" + str(len(news_data)))\n",
     "    return news_data\n",
@@ -155,15 +148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "8c9c26bab89865a5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-25T07:22:07.122825Z",
-     "start_time": "2023-11-25T07:21:57.150957Z"
-    },
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -180,8 +166,7 @@
      "text": [
       "Total amount of data is 1268\n",
       "start nlkt process\n",
-      "Total amount of data is 2356\n",
-      "start nlkt process\n"
+      "Total amount of data is 2356\n"
      ]
     }
    ],
@@ -193,71 +178,71 @@
     "data = load_data(year, start_month, end_month)\n",
     "keyword_list = []\n",
     "stopword_list = load_security_words()\n",
-    "sent = []\n",
     "\n",
     "print(\"start nlkt process\")\n",
     "for i, content in enumerate(data):\n",
     "    word_list = tokenize(content)\n",
     "    word_list_cleaned = remove_stopwords(stopword_list, word_list)\n",
-    "    sent.append(word_list_cleaned)\n",
     "    keyword_list.extend(word_list_cleaned)\n",
     "\n",
     "year = '2023'\n",
     "start_month = 1\n",
     "end_month = 11\n",
-    "\n",
     "data = load_data(year, start_month, end_month)\n",
-    "print(\"start nlkt process\")\n",
     "for i, content in enumerate(data):\n",
     "    word_list = tokenize(content)\n",
     "    word_list_cleaned = remove_stopwords(stopword_list, word_list)\n",
-    "    sent.append(word_list_cleaned)\n",
     "    keyword_list.extend(word_list_cleaned)\n",
-    "\n",
+    "    \n",
     "keyword_counter = Counter(keyword_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "72e9f43aea5586c5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-25T07:22:07.142927Z",
-     "start_time": "2023-11-25T07:22:07.126639Z"
-    },
-    "collapsed": false
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "corpus=TextCollection(sent)"
+    "word_dict = dict(keyword_counter)\n",
+    "sorted_data = sorted(word_dict.items(), key=lambda x: x[1], reverse=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "c3353b0b6addd2ec",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-25T07:22:26.728812Z",
-     "start_time": "2023-11-25T07:22:07.142421Z"
-    },
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "word_dict = dict(keyword_counter)\n",
-    "sorted_data = sorted(word_dict.items(), key=lambda x: x[1], reverse=True)\n",
-    "# 创建CSV文件并写入数据\n",
-    "with open('output/TF_IDF/output_.csv', 'w', newline='') as csv_file:\n",
-    "    writer = csv.writer(csv_file)\n",
-    "\n",
-    "    # 写入CSV文件的表头\n",
-    "    writer.writerow(['word', 'freq'])\n",
-    "\n",
-    "    # 写入JSON数据\n",
-    "    for item in sorted_data:\n",
-    "        writer.writerow([item[0], corpus.tf_idf(item[0],corpus)])"
+    "data = sorted_data[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('threat', 4845),\n",
+       " ('security', 4693),\n",
+       " ('malware', 3693),\n",
+       " ('information', 3071),\n",
+       " ('vulnerability', 2726),\n",
+       " ('victim', 2509),\n",
+       " ('ransomware', 2240),\n",
+       " ('cybersecurity', 2067),\n",
+       " ('Microsoft', 1931),\n",
+       " ('campaign', 1828)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   }
  ],
@@ -281,5 +266,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
