--- a/TFIDF.ipynb
+++ b/TFIDF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "32a0e42c5fa4559b",
    "metadata": {
     "ExecuteTime": {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "8c9c26bab89865a5",
    "metadata": {
     "ExecuteTime": {
@@ -178,34 +178,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total amount of data is 358\n",
-      "start nlkt process\n"
+      "Total amount of data is 1268\n",
+      "start nlkt process\n",
+      "Total amount of data is 2356\n"
      ]
     }
    ],
    "source": [
-    "year = '2023'\n",
-    "start_month = 10\n",
-    "end_month = 11\n",
+    "year = '2022'\n",
+    "start_month = 7\n",
+    "end_month = 12\n",
     "\n",
     "data = load_data(year, start_month, end_month)\n",
     "keyword_list = []\n",
     "stopword_list = load_security_words()\n",
-    "# sent = []\n",
+    "sent=[]\n",
     "\n",
     "print(\"start nlkt process\")\n",
     "for i, content in enumerate(data):\n",
     "    word_list = tokenize(content)\n",
     "    word_list_cleaned = remove_stopwords(stopword_list, word_list)\n",
-    "    # sent.append(word_list_cleaned)\n",
+    "    sent.append(word_list_cleaned)\n",
     "    keyword_list.extend(word_list_cleaned)\n",
     "\n",
+    "year = '2023'\n",
+    "start_month = 1\n",
+    "end_month = 11\n",
+    "data = load_data(year, start_month, end_month)\n",
+    "for i, content in enumerate(data):\n",
+    "    word_list = tokenize(content)\n",
+    "    word_list_cleaned = remove_stopwords(stopword_list, word_list)\n",
+    "    sent.append(word_list_cleaned)\n",
+    "    keyword_list.extend(word_list_cleaned)\n",
+    "    \n",
     "keyword_counter = Counter(keyword_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "72e9f43aea5586c5",
    "metadata": {
     "ExecuteTime": {
@@ -221,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "c3353b0b6addd2ec",
    "metadata": {
     "ExecuteTime": {
@@ -235,7 +246,7 @@
     "word_dict = dict(keyword_counter)\n",
     "sorted_data = sorted(word_dict.items(), key=lambda x: x[1], reverse=True)\n",
     "# 创建CSV文件并写入数据\n",
-    "with open('output/word_freq/2023_season4.csv', 'w', newline='') as csv_file:\n",
+    "with open('output/word_freq/all.csv', 'w', newline='') as csv_file:\n",
     "    writer = csv.writer(csv_file)\n",
     "\n",
     "    # 写入CSV文件的表头\n",
